--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -37,7 +37,7 @@ dependencies:
   cloud_firestore: ^4.4.2
   # firebase_core: ^2.6.1
   shared_preferences: ^2.0.17
-  # flutter_html: ^2.1.0
+  flutter_html: ^3.0.0-alpha.6
   flutter_facebook_auth: ^5.0.4
   flutter_local_notifications: ^12.0.4
   flutter_launcher_icons: ^0.11.0
@@ -48,9 +48,9 @@ dependencies:
   web_socket_channel: ^2.1.0
   share_plus: ^6.3.1
   quick_actions: ^1.0.1
+  fluttertoast: ^8.2.1
   flutter_test:
     sdk: flutter
-
 
 flutter_icons:
   android: true
@@ -62,7 +62,6 @@ flutter_icons:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -70,7 +69,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  #   - assets/icons/
+    #   - assets/icons/
     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -108,7 +107,7 @@ flutter:
     - family: Poppins-SemiBold
       fonts:
         - asset: assets/fonts/Poppins-SemiBold.ttf
-    
+
     - family: PragatiNarrow-Bold
       fonts:
         - asset: assets/fonts/PragatiNarrow-Bold.ttf
